Changelog for SHE_IAL_Pipelines

Changes in v9.3
===============

API Changes
-----------

Dependency Changes
------------------

Deprecated Features
-------------------

Bug Fixes
---------

New Features
------------

New config features
-------------------

Miscellaneous
-------------

Changes in v9.2
===============

API Changes
-----------
- SHE_PSF_Fitting_Pipeline no longer takes a VIS stacked frame as input

Dependency Changes
------------------

Deprecated Features
-------------------

Bug Fixes
---------

- Fix import from PackageDef in SHE_LensMC_Pipeline
- Add missing E-Run command to SHE_CTE_ShearEstimatesMerge pipeline task
- Remap exposure segmentation maps into a single one-dimensional listfile


New Features
------------

New config features
-------------------

Miscellaneous
-------------


Changes in v9.1
===============

Dependency Changes
------------------
- SHE_CTE 9.1
- SHE_Validation 9.1
- SHE_MER 9.1
- SHE_PSFToolkit 9.2
- SHE_GST 9.1

Deprecated Features
-------------------

Bug Fixes
---------

New Features
------------
- SHE_PSF_Fitting_Pipeline: remap segmentation maps and fit PSF model to exposures.
- SHE_LensMC_Pipeline: PSF modeling and shape measurement using LensMC.


Changes in v9.0
========================

API Changes
-----------

Dependency Changes
------------------
Now Depends on DM 9 and EDEN 3

Deprecated Features
-------------------

Bug Fixes
---------

New Features
------------

New config features
-------------------

Miscellaneous
-------------
- Applied PEP8 autoformatting to all python files in project

Changes in v8.3
========================

API Changes
-----------

Dependency Changes
------------------

Deprecated Features
-------------------

Bug Fixes
---------

New Features
------------

New config features
-------------------

Miscellaneous
-------------
- Version number is now determined in the code directly from what's in the CMakeLists.txt file, and no longer needs to
  be maintained separately

