@@ -1,3 +1,3 @@
 #!groovy
 @Library('integration-library@release-9') _
-pipelineElements(artifactId:"SHE_IAL_Pipelines", component:'eden.3.0')
+pipelineElements(artifactId:"SHE_Pipeline", component:'eden.3.0')
