@@ -102,7 +102,7 @@ def mainMethod(args):
 
     exec_cmd = get_arguments_string(
         args,
-        cmd="E-Run SHE_IAL_Pipelines " + SHE_Pipeline.__version__ + " SHE_Pipeline_Run",
+        cmd="E-Run SHE_Pipeline " + SHE_Pipeline.__version__ + " SHE_Pipeline_Run",
         store_true=["profile", "debug", "cluster", "use_debug_server_config", "dry_run", "skip_file_setup"],
         )
     logger.info('Execution command for this step:')
