@@ -1,5 +1,5 @@
-SHE_IAL_Pipelines Documentation
-===============================
+SHE_Pipeline Documentation
+==========================
 
 .. toctree::
     :maxdepth: 3
@@ -9,6 +9,5 @@ SHE_IAL_Pipelines Documentation
     installation
     programs
     scripts
-    pipelines
     guides
     troubleshooting
